<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical"
>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/image"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:scaleType="centerCrop"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginEnd="@dimen/margin_16dp"
                      android:layout_marginTop="@dimen/margin_16dp"
                      android:layout_marginStart="@dimen/margin_16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_name"
                    android:id="@+id/title"
                    android:textSize="@dimen/font_15sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/roboto"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sub_item"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin_6dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/author"
                        android:textSize="@dimen/font_12sp"
                        android:fontFamily="sans-serif"
                        android:text="@string/description"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    android:text="@string/author"
                    android:textSize="@dimen/font_12sp"
                    android:textStyle="italic"
                    android:layout_marginTop="@dimen/margin_6dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/roboto"/>

        </LinearLayout>

    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/line_background"
          android:layout_marginTop="@dimen/margin_16dp"/>

</LinearLayout>