<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/HeaderBar"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending"
                android:textColor="#25282B"
                android:layout_gravity="center"
                android:textSize="21sp"
                android:fontFamily="sans-serif-medium"
                android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_background"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/successView"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rView"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/retryView"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:gravity="center"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/nointernet_connection"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_24dp"
                      android:text="@string/something_went_wrong"
                      android:layout_gravity="center_horizontal"
                      android:textSize="@dimen/font_18sp"
                      android:textStyle="bold"
                      android:textColor="@color/color_4A4A4A"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_8dp"
                      android:text="@string/alien_message"
                      android:layout_gravity="center_horizontal"
                      android:textColor="@color/color_929292"
                      android:textSize="@dimen/font_15sp"/>

        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/retryTextView"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginBottom="@dimen/margin_16dp"
                  android:gravity="center_horizontal"
                  android:text="@string/retry"
                  android:textSize="@dimen/font_15sp"
                  android:textStyle="bold"
                  android:textAllCaps="true"
                  android:textColor="@color/color_31B057"
                  android:layout_marginStart="@dimen/margin_16dp"
                  android:layout_marginEnd="@dimen/margin_16dp"
                  android:background="@drawable/retry_background"/>
    </android.support.constraint.ConstraintLayout>


    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/rViewProgress"/>

</android.support.constraint.ConstraintLayout>